<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/roxo"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/roteirofacil"
            android:contentDescription="@string/nome" />

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/username"
            android:backgroundTint="@color/accent_color"
            android:padding="16dp"
            android:drawableStart="@drawable/user"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@color/branco" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password"
            android:backgroundTint="@color/accent_color"
            android:padding="16dp"
            android:drawableStart="@drawable/senha"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/branco" />

        <EditText
            android:id="@+id/confirma_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/confirm_password"
            android:backgroundTint="@color/accent_color"
            android:padding="16dp"
            android:drawableStart="@drawable/senha"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/branco" />

        <Button
            android:id="@+id/cria_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/criarusuario"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/accent_color"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>
