<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/roxo"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="188dp"
            android:layout_height="186dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/nome"
            android:src="@drawable/roteirofacil" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/username"
            android:backgroundTint="@color/accent_color"
            android:padding="16dp"
            android:drawableStart="@drawable/user"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@color/branco" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password"
            android:backgroundTint="@color/accent_color"
            android:padding="16dp"
            android:drawableStart="@drawable/senha"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/branco" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/entrar"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/accent_color"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/cadastro_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/inscrever"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/accent_color"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/nome"
        android:textColor="@color/accent_color" />
</LinearLayout>
